cluster/base/05-coredns-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns
  namespace: kube-system
spec:
  type: ClusterIP
