cluster/base/04-longhorn-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-route
  namespace: longhorn-system
spec:
  parentRefs:
  - name: lan-gateway
    namespace: kube-system
  hostnames:
  - "longhorn.dtx.lan"
  rules:
  - backendRefs:
    - name: longhorn-frontend
      port: 80 # <--- Keep this at 8000 so it goes straight to the container
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-longhorn
  namespace: longhorn-system
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: kube-system
  to:
  - group: ""
    kind: Service
